k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost  # Usamos localhost para pruebas locales
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service  # Nombre del servicio al que debe llegar el tráfico
            port:
              number: 3000  # Puerto donde tu backend está expuesto
